--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
             "react-app/jest"
         ]
     },
+    "engines": {
+        "node": ">=16.15.0"
+    },
     "browserslist": {
         "production": [
             ">0.2%",
